--- a/Resturants/StroyBoard/Home.storyboard
+++ b/Resturants/StroyBoard/Home.storyboard
@@ -381,7 +381,7 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="345" height="60"/>
                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                         <connections>
-                                                            <action selector="ontapCrtAccnt:" destination="yp5-TF-57D" eventType="touchUpInside" id="gwq-oa-9dw"/>
+                                                            <action selector="ontapLogout:" destination="yp5-TF-57D" eventType="touchUpInside" id="HQI-tl-1sR"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -431,9 +431,6 @@
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y8v-Xi-1fv">
                                                         <rect key="frame" x="0.0" y="0.0" width="345" height="60"/>
                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                        <connections>
-                                                            <action selector="ontapCrtAccnt:" destination="yp5-TF-57D" eventType="touchUpInside" id="lga-mi-zTV"/>
-                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -483,7 +480,8 @@
                                                         <rect key="frame" x="0.0" y="0.0" width="345" height="60"/>
                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                         <connections>
-                                                            <action selector="ontapCrtAccnt:" destination="yp5-TF-57D" eventType="touchUpInside" id="6Cy-bH-61c"/>
+                                                            <action selector="ontapCrtAccnt:" destination="yp5-TF-57D" eventType="touchUpInside" id="1b1-W7-ZLz"/>
+                                                            <action selector="ontapVideoRecording:" destination="yp5-TF-57D" eventType="touchUpInside" id="9m1-kr-oLm"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -552,6 +550,7 @@
                     <connections>
                         <outlet property="btnCreateAccnt" destination="AiQ-LH-bJW" id="63R-yt-ajA"/>
                         <outlet property="btnLogout" destination="TJj-ZK-tgM" id="OuB-DP-aac"/>
+                        <outlet property="btnUpload" destination="KIQ-Pd-SRf" id="Lap-iB-Fjr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P6I-VV-tbx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
